--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - '--config.file=/etc/prometheus/prometheus.yml'
     ports:
       - '9090:9090'
-      
+
   loki:
     image: grafana/loki:latest
     ports:
@@ -21,10 +21,12 @@ services:
   promtail:
     image: grafana/promtail:latest
     volumes:
-      - /var/log:/var/log
+      - /var/log:/var/log:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
       - ./promtail-config.yaml:/etc/promtail/config.yaml
     depends_on:
       - loki
+    command: -config.file=/etc/promtail/config.yaml
 
   grafana:
     image: grafana/grafana
